<resources>
    <string name="app_name">Artjuna-App</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="doesn_t_have_an_account">Doesn\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_feeds">Feeds</string>
    <string name="title_profile">Profile</string>
    <string name="see_all">See All</string>
    <string name="recommendation">Recommendation</string>
    <string name="search">Search</string>
    <string name="categories">Categories</string>
    <string name="take_your_art_in_your_home">Take Your Art in Your Home</string>
    <string name="customize">Customize</string>
    <string name="checkout">Checkout</string>
    <string name="send">Send</string>
    <string name="add_product">Add Product</string>
    <string name="add_detail_product">Add detail product</string>
    <string name="product_name">Product Name</string>
    <string name="input_your_product_name">Input your product name</string>
    <string name="customize_design">Customize with your design</string>
    <string name="customize_ai">Customize with AI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temp_name_number">Eren Yeager (08237283829)</string>
    <string name="temp_address">Jl. Erwin Smith No. 4, Shiganshina, Paradis, ID 23823</string>
    <string name="product_price">Product Price</string>
    <string name="stock">Stock</string>
    <string name="select_category">Select category</string>
    <string name="notification">Notification</string>
    <string name="no_handphone">Phone Number</string>
    <string name="address">Full Address</string>
    <string name="postal_code">Postal Code</string>
    <string name="save">Save</string>
    <string name="temp_title_notif">Title</string>
    <string name="temp_desc_notif">Desc</string>
    <string name="change_address">Change Address</string>
    <string name="add_your_own_design">Add Your Own Design</string>
</resources>