<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/grey_200"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <include
        android:id="@+id/action_bar"
        layout="@layout/layout_actionbar_addproduct"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_alignParentTop="true"/>

    <include
        android:id="@+id/bottom_bar"
        layout="@layout/bottombar_customresult"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_56sdp"
        android:layout_alignParentBottom="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">


                    <ImageView
                        android:id="@+id/iv_add_photo"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_100sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_60sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        tools:srcCompat="@tools:sample/avatars" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_100sdp"
                        android:layout_marginTop="@dimen/_60sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:background="@color/white"
                        android:hint="@string/add_detail_product">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_detail_product"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:backgroundTint="@color/white"
                            android:textSize="@dimen/_8ssp"
                            android:inputType="text"/>

                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    style="@style/Body2Regular"
                    android:textStyle="bold"
                    android:text="@string/product_name"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:textAlignment="textStart"
                    android:hint="@string/input_your_product_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_10ssp"
                        android:backgroundTint="@color/white"/>


                </com.google.android.material.textfield.TextInputLayout>


            </androidx.cardview.widget.CardView>
        </LinearLayout>





    </ScrollView>


</RelativeLayout>